@@ -1,3 +1,14 @@
+2014-08-12  Alex Christensen  <achristensen@webkit.org>
+
+        Generate header detection headers for CMake on Windows.
+        https://bugs.webkit.org/show_bug.cgi?id=135807
+
+        Reviewed by Brent Fulgham.
+
+        * CMakeLists.txt:
+        * PlatformWin.cmake:
+        Generate and include a stub WebCoreHeaderDetection.h.
+
 2014-08-12  Renata Hodovan  <rhodovan.u-szeged@partner.samsung.com>
 
         Make sure that begin time cannot be greater than SMILTime::indefiniteValue unintentionally.
